<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/cat_fingerspelled" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <EditText
        android:id="@+id/guessEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/guess_hint"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63" />

    <Button
        android:id="@+id/checkButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_guess_button" />

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/score" />


</LinearLayout>